// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses all xlsx files by pattern 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test",
      ],
      "obj": Object {
        "A": "test",
      },
    },
    "header": Array [],
    "processedSheetSize": 454,
    "raw": Object {
      "arr": Array [
        "test",
      ],
      "obj": Object {
        "A": "test",
      },
    },
    "totalSheetSize": 454,
  },
]
`;

exports[`parses multiple sheets 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
    "header": Array [],
    "processedSheetSize": 455,
    "raw": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
    "totalSheetSize": 455,
  },
  Object {
    "formatted": Object {
      "arr": Array [
        "test2",
      ],
      "obj": Object {
        "A": "test2",
      },
    },
    "header": Array [],
    "processedSheetSize": 455,
    "raw": Object {
      "arr": Array [
        "test2",
      ],
      "obj": Object {
        "A": "test2",
      },
    },
    "totalSheetSize": 455,
  },
  Object {
    "formatted": Object {
      "arr": Array [
        "test1",
      ],
      "obj": Object {
        "A": "test1",
      },
    },
    "header": Array [],
    "processedSheetSize": 455,
    "raw": Object {
      "arr": Array [
        "test1",
      ],
      "obj": Object {
        "A": "test1",
      },
    },
    "totalSheetSize": 455,
  },
]
`;

exports[`parses specific sheet by function 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
    "header": Array [],
    "processedSheetSize": 455,
    "raw": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
    "totalSheetSize": 455,
  },
]
`;

exports[`parses specific sheet by index 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
    "header": Array [],
    "processedSheetSize": 455,
    "raw": Object {
      "arr": Array [
        "test3",
      ],
      "obj": Object {
        "A": "test3",
      },
    },
    "totalSheetSize": 455,
  },
]
`;

exports[`parses specific sheet by name 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "test2",
      ],
      "obj": Object {
        "A": "test2",
      },
    },
    "header": Array [],
    "processedSheetSize": 455,
    "raw": Object {
      "arr": Array [
        "test2",
      ],
      "obj": Object {
        "A": "test2",
      },
    },
    "totalSheetSize": 455,
  },
]
`;

exports[`parses xlsx with header 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "column1": "hello",
        "column2": "world",
      },
    },
    "header": Array [
      "column1",
      "column2",
    ],
    "processedSheetSize": 584,
    "raw": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "column1": "hello",
        "column2": "world",
      },
    },
    "totalSheetSize": 584,
  },
]
`;

exports[`parses xlsx without header 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
    "header": Array [],
    "processedSheetSize": 495,
    "raw": Object {
      "arr": Array [
        "hello",
        "world",
      ],
      "obj": Object {
        "A": "hello",
        "B": "world",
      },
    },
    "totalSheetSize": 495,
  },
]
`;

exports[`respects rowLimit 1`] = `
Array [
  Object {
    "formatted": Object {
      "arr": Array [
        1,
      ],
      "obj": Object {
        "A": 1,
      },
    },
    "header": Array [],
    "processedSheetSize": 598,
    "raw": Object {
      "arr": Array [
        1,
      ],
      "obj": Object {
        "A": 1,
      },
    },
    "totalSheetSize": 598,
  },
  Object {
    "formatted": Object {
      "arr": Array [
        2,
      ],
      "obj": Object {
        "A": 2,
      },
    },
    "header": Array [],
    "processedSheetSize": 598,
    "raw": Object {
      "arr": Array [
        2,
      ],
      "obj": Object {
        "A": 2,
      },
    },
    "totalSheetSize": 598,
  },
  Object {
    "formatted": Object {
      "arr": Array [
        3,
      ],
      "obj": Object {
        "A": 3,
      },
    },
    "header": Array [],
    "processedSheetSize": 598,
    "raw": Object {
      "arr": Array [
        3,
      ],
      "obj": Object {
        "A": 3,
      },
    },
    "totalSheetSize": 598,
  },
]
`;
